[tool.poetry]
name = "bitsea"
version = "0.1.0"
description = ""
authors = ["OGS"]
readme = "README.md"
packages = [
    { include = "bitsea", from="src" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">1.26.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.2"
matplotlib = ">3.7.5"
netcdf4 = "^1.6.5"
cartopy = "^0.23.0"
geographiclib = "^2.0"
numba = ">0.58"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
requests = "^2.32.3"
hypothesis = "^6.115.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "uses_test_data: Needs external data not downloaded from the repository"
]


[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["mpi4py.MPI"]
