[tool.poetry]
name = "bitsea"
version = "0.1.0"
description = ""
authors = ["OGS"]
readme = "README.md"
packages = [
    { include = "bitsea", from="src" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">2.0.0"
scipy = "^1.12.0"
netcdf4 = "^1.6.5"
xarray = ">2024.1.0"
defusedxml = "^0.7.1"

[tool.poetry.group.plots.dependencies]
matplotlib = ">3.7.5"
cartopy = "^0.25.0"

[tool.poetry.group.algorithms.dependencies]
geographiclib = "^2.0"

[tool.poetry.group.performances.dependencies]
numba = ">0.58"
scikit-learn = "^1.4.2"

[tool.poetry.group.docs.dependencies]
sphinx = ">=8.2.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
pytest = "^9.0.2"
pre-commit = "^4.5.1"
requests = "^2.33.0"
hypothesis = "^6.115.3"

[tool.poetry.extras]
plots = ["matplotlib", "cartopy"]
algorithms = ["geographiclib"]
performances = ["numba", "scikit-learn"]
all = ["matplotlib", "cartopy", "geographiclib", "numba", "scikit-learn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "uses_test_data: Needs external data not downloaded from the repository"
]


[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["mpi4py.MPI"]
